Added to my About Me page

--- a/KlienstuberWebsite/KlienstuberWebsite/KlienstuberWebsite.csproj
+++ b/KlienstuberWebsite/KlienstuberWebsite/KlienstuberWebsite.csproj
@@ -144,6 +144,7 @@
     <Content Include="Images\Flower2.jpg" />
     <Content Include="Images\Flower3.jpg" />
     <Content Include="Images\Flower4.jpg" />
+    <Content Include="Images\me.jpg" />
     <Content Include="Images\sunrise.png" />
     <Content Include="Images\sunrise2.jpg" />
     <Content Include="Images\sunrise3.png" />
