Added portfolio page and put my resume, github, and snippets of my work on it

--- a/KlienstuberWebsite/KlienstuberWebsite/KlienstuberWebsite.csproj
+++ b/KlienstuberWebsite/KlienstuberWebsite/KlienstuberWebsite.csproj
@@ -135,6 +135,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\athlete.png" />
     <Content Include="Images\birds.jpg" />
     <Content Include="Images\bojack.jpg" />
     <Content Include="Images\coffee-cup-cafe-drawing-hand-painted-brown-coffee-cup.jpg" />
@@ -142,12 +143,18 @@
     <Content Include="Images\coffee2.png" />
     <Content Include="Images\coffee3.png" />
     <Content Include="Images\coffee4.jpeg" />
+    <Content Include="Images\colorInterpolate.png" />
     <Content Include="Images\disneybetter.jpg" />
     <Content Include="Images\disneyme.jpg" />
+    <Content Include="Images\eventsAPI.png" />
+    <Content Include="Images\firstWebsite.png" />
     <Content Include="Images\Flower.jpg" />
     <Content Include="Images\Flower2.jpg" />
     <Content Include="Images\Flower3.jpg" />
     <Content Include="Images\Flower4.jpg" />
+    <Content Include="Images\githubAPI.png" />
+    <Content Include="Images\HelpPage.png" />
+    <Content Include="Images\homeworkTracker.png" />
     <Content Include="Images\joshandi.jpg" />
     <Content Include="Images\lam2.jpg" />
     <Content Include="Images\lam3.jpg" />
@@ -161,12 +168,16 @@
     <Content Include="Images\mewalking2.png" />
     <Content Include="Images\mewalking3.png" />
     <Content Include="Images\selfie.jpg" />
+    <Content Include="Images\simplySeniorsHome.png" />
+    <Content Include="Images\simplySeniorsProfile.png" />
     <Content Include="Images\sunrise.png" />
     <Content Include="Images\sunrise2.jpg" />
     <Content Include="Images\sunrise3.png" />
     <Content Include="Images\sunrise4.png" />
     <Content Include="Images\sunrise5.png" />
     <Content Include="Images\Tree.jpg" />
+    <Content Include="Images\worldWide.png" />
+    <Content Include="Images\worldWide2.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
