I think I finished my website but I will probz add stuff later

--- a/.gitignore
+++ b/.gitignore
@@ -148,9 +148,8 @@ publish/
 
 # Ignore encrypted GitHub Key File
 /Web_deploy.config
-/HW7/Homework7/Homework7/Web_deploy.config
 /AppSettingsSecrets.config
-/SimplySeniors/AppSettingsSecrets.config
+AppSettingsSecrets.config
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
 # checkin your Azure Web App publish settings, but sensitive information contained
