--- a/KlienstuberWebsite/KlienstuberWebsite/KlienstuberWebsite.csproj
+++ b/KlienstuberWebsite/KlienstuberWebsite/KlienstuberWebsite.csproj
@@ -137,6 +137,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Images\athlete.png" />
     <Content Include="Images\birds.jpg" />
+    <Content Include="Images\BitBreakers.png" />
     <Content Include="Images\bojack.jpg" />
     <Content Include="Images\coffee-cup-cafe-drawing-hand-painted-brown-coffee-cup.jpg" />
     <Content Include="Images\coffee.png" />
@@ -167,15 +168,18 @@
     <Content Include="Images\mewalking.jpg" />
     <Content Include="Images\mewalking2.png" />
     <Content Include="Images\mewalking3.png" />
+    <Content Include="Images\MyProfile.png" />
     <Content Include="Images\selfie.jpg" />
     <Content Include="Images\simplySeniorsHome.png" />
     <Content Include="Images\simplySeniorsProfile.png" />
+    <Content Include="Images\SimplySeniorsRegister.png" />
     <Content Include="Images\sunrise.png" />
     <Content Include="Images\sunrise2.jpg" />
     <Content Include="Images\sunrise3.png" />
     <Content Include="Images\sunrise4.png" />
     <Content Include="Images\sunrise5.png" />
     <Content Include="Images\Tree.jpg" />
+    <Content Include="Images\website.png" />
     <Content Include="Images\worldWide.png" />
     <Content Include="Images\worldWide2.png" />
     <Content Include="Scripts\bootstrap.js" />
